# MindLens

./: .editorconfig  .gitignore  CHANGELOG.md  FAQ.md  INSTALLATION.md  LICENSE.md  QUICKSTART.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  setup-git-hooks.ps1
.githooks/: README.md  pre-commit  pre-commit.bat  pre-commit.ps1
.github/: .email-template.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/: Readme.md
apps/backend/: Readme.md
apps/desktop/: Cargo.toml  package.json  tauri.conf.json  tauri.dev.conf.json  test.txt
apps/desktop/src/: lib.rs  main.rs
apps/desktop/src/commands/: dialogs.rs  files.rs  mod.rs  settings.rs  system.rs
apps/frontend/: .env.production  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.eslint.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/src/: lib.rs
apps/frontend/src/global/: global.d.ts
apps/frontend/src/screens/: TauriDemo.tsx
core/: README.md
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  FILE_HEADERS.md  README.md  VISION.md  roadmap.md  whitepaper.md
docs/FAQ/: developers.md  legal.md
docs/LICENSES/: COMMERCIAL.md  NOTICE.md
docs/comparisons/: mindlens-vs-others.md
engine/: README.md
platform/: README.md
plugins/: README.md
scripts/: dev.ps1  setup-git-hooks.ps1
(+9 files in other folders)
