[package]
name = "mindlens-desktop"
version = "0.1.0"
description = "MindLens Desktop Application - Interactive environment for designing and visualizing application architecture"
authors = ["Andrii Volynets"]
license = "AGPL-3.0"
repository = "https://github.com/your-repo/mindlens"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mindlens_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["devtools"] }
tauri-plugin-log = "2.0.0-rc"
hostname = "0.3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.
debug = true # Enable debug information for better debugging
opt-level = 0 # No optimization for faster compilation

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
